--- a/res/layout/bugreport_base.xml
+++ b/res/layout/bugreport_base.xml
@@ -80,32 +80,20 @@
             android:layout_marginRight="4dp"
             android:layout_marginBottom="10dp">
             <TableRow>
-                <CheckBox
-                    android:id="@+id/checkbox_general"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:text="@string/general_logcat"/>
-                <CheckBox
-                    android:id="@+id/checkbox_radio"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:text="@string/radio_logcat" />
+        <CheckBox
+            android:id="@+id/checkbox_general"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:text="@string/general_logcat"/>
+        <CheckBox
+            android:id="@+id/checkbox_complete"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:text="@string/complete_log" />
             </TableRow>
             <TableRow>
-                <CheckBox
-                    android:id="@+id/checkbox_dmesg"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:text="@string/dmesg_log"/>
-                <CheckBox
-                    android:id="@+id/checkbox_last_kmsg"
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:text="@string/last_kmsg"/>
             </TableRow>
 
         </TableLayout>
