PA solid circle battery style [2/2]
*DU Edits*

- Cleaned up StatusbarBatteryStyle

Change-Id: I2a74874fca145236b078e671548bd5041cb3f5bb

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -52,6 +52,7 @@
         <item>@string/battery_icon_portrait</item>
         <item>@string/battery_icon_landscape</item>
         <item>@string/battery_icon_circle</item>
+        <item>@string/battery_icon_solid_circle</item>
         <item>@string/battery_icon_text</item>
         <item>@string/battery_icon_hidden</item>
     </string-array>
@@ -60,6 +61,7 @@
         <item>0</item>
         <item>5</item>
         <item>2</item>
+        <item>7</item>
         <item>6</item>
         <item>4</item>
     </string-array>
