--- a/res/xml/interface_power_menu.xml
+++ b/res/xml/interface_power_menu.xml
@@ -16,28 +16,34 @@
  * limitations under the License.
  -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:toolbox="http://schemas.android.com/apk/res/com.evervolv.toolbox">
 
-        <SwitchPreference android:key="pref_power_menu_hide_screenshot"
+        <android.support.v14.preference.SwitchPreference
+            android:key="pref_power_menu_hide_screenshot"
             android:title="@string/pref_power_menu_hide_screenshot_title"
-            android:disableDependentsState="true">
-        </SwitchPreference>
+            android:disableDependentsState="true" />
 
-        <SwitchPreference android:key="pref_power_menu_hide_sound"
-            android:title="@string/pref_power_menu_hide_sound_title">
-        </SwitchPreference>
+        <android.support.v14.preference.SwitchPreference
+            android:key="pref_power_menu_hide_sound"
+            android:title="@string/pref_power_menu_hide_sound_title" />
 
-        <SwitchPreference android:key="pref_power_menu_hide_airplane_mode"
-            android:title="@string/pref_power_menu_hide_airplane_mode_title">
-        </SwitchPreference>
+        <android.support.v14.preference.SwitchPreference
+            android:key="pref_power_menu_hide_airplane_mode"
+            android:title="@string/pref_power_menu_hide_airplane_mode_title" />
 
-        <SwitchPreference android:key="pref_power_menu_hide_reboot_menu"
-            android:title="@string/pref_power_menu_hide_reboot_menu_title">
-        </SwitchPreference>
+        <android.support.v14.preference.SwitchPreference
+            android:key="pref_power_menu_hide_reboot_menu"
+            android:title="@string/pref_power_menu_hide_reboot_menu_title" />
 
-        <com.evervolv.toolbox.preference.NumberPickerPreference android:key="pref_power_menu_screenshot_delay"
+        <com.evervolv.toolbox.preference.CustomSeekBarPreference
+            android:key="pref_power_menu_screenshot_delay"
             android:title="@string/pref_power_menu_screenshot_delay_title"
-            android:dependency="pref_power_menu_hide_screenshot">
-        </com.evervolv.toolbox.preference.NumberPickerPreference>
+            android:dependency="pref_power_menu_hide_screenshot"
+            android:persistent="false"
+            toolbox:max="10000"
+            toolbox:min="100"
+            toolbox:interval="100"
+            toolbox:units="ms" />
 
 </PreferenceScreen>
