--- a/res/xml/statusbar_qs.xml
+++ b/res/xml/statusbar_qs.xml
@@ -18,10 +18,10 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <SwitchPreference
-            android:key="pref_statusbar_quick_pulldown"
+        <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
+            android:key="status_bar_quick_qs_pulldown"
             android:title="@string/pref_statusbar_quick_pulldown_title"
-            android:summary="@string/pref_statusbar_quick_pulldown_summary">
-        </SwitchPreference>
+            android:summary="@string/pref_statusbar_quick_pulldown_summary"
+            android:defaultValue="false" />
 
 </PreferenceScreen>
