--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -66,6 +66,20 @@
         <item>4</item>
     </string-array>
 
+    <string-array name="statusbar_batt_tile_entries" translatable="false">
+        <item>@string/battery_icon_portrait</item>
+        <item>@string/battery_icon_landscape</item>
+        <item>@string/battery_icon_circle</item>
+        <item>@string/battery_icon_solid_circle</item>
+    </string-array>
+
+    <string-array name="statusbar_batt_tile_entryvalues" translatable="false">
+        <item>0</item>
+        <item>5</item>
+        <item>2</item>
+        <item>7</item>
+    </string-array>
+
     <string-array name="statusbar_batt_percent_entries" translatable="false">
         <item>@string/battery_icon_percent_hidden</item>
         <item>@string/battery_icon_percent_inside</item>
