--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -53,11 +53,14 @@
             android:defaultValue="0"
             android:persistent="true" />
 
-        <org.cyanogenmod.support.preference.SecureSettingSwitchPreference
-            android:key="status_bar_battery_style_tile"
-            android:title="@string/battery_icon_qs_tile_title"
-            android:summary="@string/battery_icon_qs_tile_summary"
-            android:defaultValue="true"
+        <org.cyanogenmod.support.preference.SecureSettingListPreference
+            android:key="battery_tile_style"
+            android:title="@string/battery_tile_style_title"
+            android:summary="@string/battery_tile_style_summary"
+            android:dialogTitle="@string/battery_icon_title"
+            android:entries="@array/statusbar_batt_tile_entries"
+            android:entryValues="@array/statusbar_batt_tile_entryvalues"
+            android:defaultValue="0"
             android:persistent="true" />
 
         <org.cyanogenmod.support.preference.SecureSettingSwitchPreference
