Toolbox: reorganize string a bit
 * move generic string to the top, section specific to the bottom
 * group section titles in with the section string
 * no real purpose outside of it reads a bit better

Change-Id: Id99e78e9a01a5ff1fd422a42ce179d427e010ba6

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -29,7 +29,7 @@
     </string-array>
 
     <string-array name="statusbar_nav" translatable="false">
-        <item>@string/general_title</item>
+        <item>@string/statusbar_icons_title</item>
         <item>@string/statusbar_qs_title</item>
     </string-array>
 
