--- a/res/xml/statusbar_general.xml
+++ b/res/xml/statusbar_general.xml
@@ -25,7 +25,8 @@
             android:dialogTitle="@string/pref_statusbar_batt_style_title"
             android:entries="@array/statusbar_batt_style_entries"
             android:entryValues="@array/statusbar_batt_style_entryvalues"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            android:persistent="true" />
 
         <com.evervolv.toolbox.preference.SecureSettingListPreference
             android:key="status_bar_show_battery_percent"
@@ -34,26 +35,29 @@
             android:dialogTitle="@string/pref_statusbar_batt_percent_title"
             android:entries="@array/statusbar_batt_percent_entries"
             android:entryValues="@array/statusbar_batt_percent_entryvalues"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            android:persistent="true" />
 
         <com.evervolv.toolbox.preference.SecureSettingSwitchPreference
             android:key="status_bar_battery_style_tile"
             android:title="@string/pref_statusbar_batt_style_tile_title"
             android:summary="@string/pref_statusbar_batt_style_tile_summary"
-            android:defaultValue="true" />
+            android:defaultValue="true"
+            android:persistent="true" />
 
         <com.evervolv.toolbox.preference.SecureSettingSwitchPreference
             android:key="force_charge_battery_text"
             android:title="@string/pref_statusbar_batt_charge_text_title"
             android:summaryOff="@string/pref_statusbar_batt_charge_text_summary_off"
             android:summaryOn="@string/pref_statusbar_batt_charge_text_summary_on"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            android:persistent="true" />
 
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="pref_status_bar_charge_color"
             android:title="@string/pref_status_bar_charge_color_title"
-            android:persistent="false"
-            android:defaultValue="0xffffff" />
+            android:defaultValue="0xffffff"
+            android:persistent="false" />
 
         <com.evervolv.toolbox.preference.SecureSettingListPreference
             android:key="text_charging_symbol"
@@ -62,7 +66,8 @@
             android:dialogTitle="@string/pref_statusbar_batt_text_symbol_dialog"
             android:entries="@array/pref_statusbar_batt_text_symbol_entries"
             android:entryValues="@array/pref_statusbar_batt_text_symbol_entryvalues"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            android:persistent="true" />
 
         <com.evervolv.toolbox.preference.SystemSettingListPreference
             android:key="statusbar_clock_am_pm_style"
@@ -71,6 +76,7 @@
             android:dialogTitle="@string/pref_statusbar_clock_am_pm_style_title"
             android:entries="@array/statusbar_clock_am_pm_style_entries"
             android:entryValues="@array/statusbar_clock_am_pm_style_entryvalues"
-            android:defaultValue="2" />
+            android:defaultValue="2"
+            android:persistent="true" />
 
 </PreferenceScreen>
