--- a/res/xml/statusbar_qs.xml
+++ b/res/xml/statusbar_qs.xml
@@ -22,6 +22,7 @@
             android:key="status_bar_quick_qs_pulldown"
             android:title="@string/pref_statusbar_quick_pulldown_title"
             android:summary="@string/pref_statusbar_quick_pulldown_summary"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            android:persistent="true" />
 
 </PreferenceScreen>
