--- a/res/layout/bugreport.xml
+++ b/res/layout/bugreport.xml
@@ -16,11 +16,11 @@
  * limitations under the License.
  -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/bugreport_base"/>
+    <include layout="@layout/bugreport_base" />
+
 </LinearLayout>
