--- a/res/menu/toolbox_drawer.xml
+++ b/res/menu/toolbox_drawer.xml
@@ -17,35 +17,22 @@
  -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
-        <item android:title="@string/drawer_header_categories">
-            <menu>
-                <item android:id="@+id/nav_interface"
-                      android:icon="@drawable/ic_menu_interface"
-                      android:title="@string/tab_title_interface" />
-                <item android:id="@+id/nav_statusbar"
-                      android:icon="@drawable/ic_menu_statusbar"
-                      android:title="@string/tab_title_statusbar" />
-                <item android:id="@+id/nav_system"
-                      android:icon="@drawable/ic_menu_system"
-                      android:title="@string/tab_title_system" />
-                <item android:id="@+id/nav_hardware"
-                      android:icon="@drawable/ic_menu_hardware"
-                      android:title="@string/tab_title_hardware" />
-                <item android:id="@+id/nav_performance"
-                      android:icon="@drawable/ic_menu_performance"
-                      android:title="@string/tab_title_performance" />
-            </menu>
-        </item>
-        <item android:title="@string/drawer_header_utils">
-            <menu>
-                <item android:id="@+id/nav_bugreport"
-                      android:icon="@drawable/ic_menu_bugreport"
-                      android:title="@string/tab_title_bugreport" />
-                <item android:id="@+id/nav_settings"
-                      android:icon="@drawable/ic_menu_settings"
-                      android:title="@string/tab_title_settings" />
-            </menu>
-        </item>
-    </group>
+    <item android:id="@+id/nav_interface"
+        android:icon="@drawable/ic_menu_interface"
+        android:title="@string/interface_settings_title" />
+    <item android:id="@+id/nav_statusbar"
+        android:icon="@drawable/ic_menu_statusbar"
+        android:title="@string/statusbar_settings_title" />
+    <item android:id="@+id/nav_system"
+        android:icon="@drawable/ic_menu_system"
+        android:title="@string/system_settings_title" />
+    <item android:id="@+id/nav_hardware"
+        android:icon="@drawable/ic_menu_hardware"
+        android:title="@string/hardware_settings_title" />
+    <item android:id="@+id/nav_performance"
+        android:icon="@drawable/ic_menu_performance"
+        android:title="@string/performance_settings_title" />
+    <item android:id="@+id/nav_settings"
+        android:icon="@drawable/ic_menu_settings"
+        android:title="@string/settings_title" />
 </menu>
