--- a/res/xml/hardware.xml
+++ b/res/xml/hardware.xml
@@ -16,61 +16,76 @@
  * limitations under the License.
  -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:key="hardware"
+    android:title="@string/hardware_settings_title" >
+
+    <PreferenceCategory
+        android:key="wake_key_category"
+        android:title="@string/wake_key_category_title">
 
         <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
             android:key="app_switch_wake_screen"
-            android:title="@string/pref_app_switch_wake_toggle_title"
-            android:summary="@string/pref_app_switch_wake_toggle_summary"
+            android:title="@string/app_switch_wake_toggle_title"
+            android:summary="@string/app_switch_wake_toggle_summary"
             android:defaultValue="false"
             android:persistent="true"
             app:requiresConfig="@bool/has_app_switch_button" />
 
         <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
             android:key="assist_wake_screen"
-            android:title="@string/pref_assist_wake_toggle_title"
-            android:summary="@string/pref_assist_wake_toggle_summary"
+            android:title="@string/assist_wake_toggle_title"
+            android:summary="@string/assist_wake_toggle_summary"
             android:defaultValue="false"
             android:persistent="true"
             app:requiresConfig="@bool/has_assist_button" />
 
         <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
             android:key="back_wake_screen"
-            android:title="@string/pref_back_wake_toggle_title"
-            android:summary="@string/pref_back_wake_toggle_summary"
+            android:title="@string/back_wake_toggle_title"
+            android:summary="@string/back_wake_toggle_summary"
             android:defaultValue="false"
             android:persistent="true"
             app:requiresConfig="@bool/has_back_button" />
 
         <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
             android:key="home_wake_screen"
-            android:title="@string/pref_home_wake_toggle_title"
-            android:summary="@string/pref_home_wake_toggle_summary"
+            android:title="@string/home_wake_toggle_title"
+            android:summary="@string/home_wake_toggle_summary"
             android:defaultValue="false"
             android:persistent="true"
             app:requiresConfig="@bool/has_home_button" />
 
         <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
             android:key="menu_wake_screen"
-            android:title="@string/pref_menu_wake_toggle_title"
-            android:summary="@string/pref_menu_wake_toggle_summary"
+            android:title="@string/menu_wake_toggle_title"
+            android:summary="@string/menu_wake_toggle_summary"
             android:defaultValue="false"
             android:persistent="true"
             app:requiresConfig="@bool/has_menu_button" />
 
         <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
             android:key="volume_wake_screen"
-            android:title="@string/pref_volume_wake_toggle_title"
-            android:summary="@string/pref_volume_wake_toggle_summary"
+            android:title="@string/volume_wake_toggle_title"
+            android:summary="@string/volume_wake_toggle_summary"
             android:defaultValue="false"
             android:persistent="true" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="music_controls_category"
+        android:title="@string/music_controls_category_title">
+
         <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
             android:key="lockscreen_music_controls_volbtn"
-            android:title="@string/pref_lockscreen_music_controls_volbtn_title"
-            android:summary="@string/pref_lockscreen_music_controls_volbtn_summary"
+            android:title="@string/lockscreen_music_controls_volbtn_title"
+            android:summary="@string/lockscreen_music_controls_volbtn_summary"
             android:defaultValue="false"
             android:persistent="true" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
